--- a/Airport/sonar-project.properties
+++ b/Airport/sonar-project.properties
@@ -11,7 +11,7 @@ sonar.host.url=https://sonarcloud.io
 #sonar.projectVersion=1.0
  
 # Path is relative to the sonar-project.properties file. Defaults to .
-sonar.sources=./src
+sonar.sources=./src/main
 
 sonar.java.binaries=./target/classes
 
